:lipstick: Fix layout issues.

--- a/src/profile/scss/_main.scss
+++ b/src/profile/scss/_main.scss
@@ -19,7 +19,7 @@ body {
       border-radius: $button_border_radius !important;
       color: #727E88 !important;
       text-transform: initial !important;
-      margin-top: 3em;
+      margin-top: 5em;
       left: 50%;
       transform: translateX(-50%);
       @include for-mobile () {
@@ -41,6 +41,8 @@ body {
     float: right;
     font-weight: 600;
     @include for-desktop () {
+      padding-left: 1.7em !important;
+      padding-right: 1.7em !important;
       border-radius: $button_border_radius !important;
       border: 1px solid $primary_blue !important;
     }
